Update of About page after feedback. Background scroll issue on iPhone solution test.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,13 @@
 @charset "UTF-8";
+html, body {
+  position: relative;
+  height: 100%;
+}
+
 ::-moz-selection {
   background: #F9E2E2;
 }
+
 ::selection {
   background: #F9E2E2;
 }
