--- a/resources/css/base/_general.scss
+++ b/resources/css/base/_general.scss
@@ -1,3 +1,8 @@
+html, body {
+	position: relative;
+	height: 100%;
+}
+
 ::selection {
 	background: $primary-color-light;
 }
